--- a/styles.css
+++ b/styles.css
@@ -316,25 +316,40 @@ a {
     border-bottom: 1px solid #F65050;
 }
 
-/* .header-3 {
+.bottom-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 0.6fr;
+    grid-template-rows: auto auto;
+    gap: 1.7rem;
+    margin-top: 2rem;
+}
+
+.bottom-grid small {
+    font-family: "Sofia Sans", sans-serif;
+
+}
+
+.img0 div {
+    margin-bottom: 1.2rem;
+}
+
+.img0 h2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-family: "Oswald", sans-serif;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+.img0 p {
+    font-size: 1rem;
+    font-family: "Sofia Sans", sans-serif;
+}
+
+footer {
     display: flex;
-    justify-content: space-between;
-} */
-
-/* .bus-div1{
-    background-color: #0088FF;
-    padding: .5rem;
-    width: 20%;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.4rem;
+    padding-top: 5rem;
+    padding-bottom: 1rem;
 }
-
-.bus-div2 {
-    background-color: #997C00;
-    padding: .5rem;
-    width: 20%;
-}
-
-.bus-div3 {
-    background-color: #49CFE8;
-    padding: .5rem;
-    width: 20%;
-} */
