--- a/styles.css
+++ b/styles.css
@@ -239,18 +239,24 @@ a {
     font-family: "Sofia Sans", sans-serif;
 }
 
+.container-2 {
+    display: grid;
+    grid-template-columns: 1fr 25%;
+    grid-template-rows: auto auto;
+    margin-top: 3rem;
+    position: relative;
+    padding: 1rem;
+}
+
+.container-2 small {
+    font-family: "Sofia Sans", sans-serif;
+
+}
+
 .heads {
     display: flex;
-    justify-content: space-between;
-    padding-top: 3rem;
-}
-.header-2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 0.5rem;
+    margin-bottom: 1.5rem;
     border-bottom: 1px solid black;
-    font-family: "Oswald", sans-serif;
 }
 
 .miss {
@@ -260,10 +266,10 @@ a {
     font-size: 1.5rem;
 }
 
-
 .buttons button {
-    font-size: 0.7rem;
-    padding: 0.7rem;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    gap: 0.5rem;
     border: none;
     color: #FFFFFF;
 }
@@ -301,33 +307,13 @@ a {
     font-size: 1rem;
 }
 
-
-.header-3{
-    display: flex;
-    gap: 3rem;
-    border-bottom: 1px solid black;
-    font-size: 0.9rem;
-    font-weight: 500;
-}
-
-
-.recent {
-    color: #F65050;
-    border-bottom: 1px solid #F65050;
-}
-
 .bottom-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 0.6fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
-    gap: 1.7rem;
+    gap: 2rem;
     margin-top: 2rem;
     position: relative;
-}
-
-.bottom-grid small {
-    font-family: "Sofia Sans", sans-serif;
-
 }
 
 .img0 div{
@@ -349,10 +335,15 @@ a {
     margin-top: 0.5rem;
 }
 
+.imgs1 {
+    margin-bottom: 1.5rem;
+}
+
 .imgs1 small {
     position: absolute;
-    top: 0.3rem;
-    left: 36rem;
+    top: 0;
+    left: 35rem;
+
 }
 
 .imgs1 h2 {
@@ -360,14 +351,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 1.5rem;
-    left: 36rem;
+    top: 1.3rem;
+    left: 35rem;
+}
+
+.imgs2 {
+    margin-bottom: 1.5rem;
 }
 
 .imgs2 small {
     position: absolute;
-    top: 5rem;
-    left: 36rem;
+    top: 6rem;
+    left: 35rem;
 }
 
 .imgs2 h2 {
@@ -375,14 +370,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 6rem;
-    left: 36rem;
+    top: 7.5rem;
+    left: 35rem;
+}
+
+.imgs3 {
+    margin-bottom: 1.5rem;
 }
 
 .imgs3 small {
     position: absolute;
-    top: 9.5rem;
-    left: 36rem;
+    top: 12.5rem;
+    left: 35rem;
 }
 
 .imgs3 h2 {
@@ -390,14 +389,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 10.5rem;
-    left: 36rem;
+    top: 13.5rem;
+    left: 35rem;
+}
+
+.imgs4 {
+    margin-bottom: 1.5rem;
 }
 
 .imgs4 small {
     position: absolute;
-    top: 14.3rem;
-    left: 36rem;
+    top: 18.7rem;
+    left: 35rem;
 }
 
 .imgs4 h2 {
@@ -405,14 +408,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 15.5rem;
-    left: 36rem;
+    top: 20rem;
+    left: 35rem;
+}
+
+.imgs5 {
+    margin-bottom: 1.5rem;
 }
 
 .imgs5 small {
     position: absolute;
-    top: 19rem;
-    left: 36rem;
+    top: 24.8rem;
+    left: 35rem;
 }
 
 .imgs5 h2 {
@@ -420,13 +427,40 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 20rem;
-    left: 36rem;
+    top: 26rem;
+    left: 35rem;
+}
+
+.bottom-grid2 {
+    margin-left: 2rem;
+}
+
+.header-3{
+    display: flex;
+    gap: 3rem;
+    border-bottom: 1px solid black;
+    font-size: 0.9rem;
+    font-weight: 500;
+    padding-top: 0.7rem;
+    margin-bottom: 1.8rem;
+    font-size: 0.95rem;
+    font-family: "Oswald", sans-serif;
+
+}
+
+.recent {
+    color: #F65050;
+    border-bottom: 1px solid #F65050;
+}
+
+.imgs6 {
+    margin-bottom: 1.5rem;
+    position: relative;
 }
 
 .imgs6 small {
     position: absolute;
-    top: 0.3rem;
+    top: 0;
     right: 1.5rem;
 }
 
@@ -439,9 +473,14 @@ a {
     right: 1rem;
 }
 
+.imgs7 {
+    margin-bottom: 1.5rem;
+    position: relative;
+}
+
 .imgs7 small {
     position: absolute;
-    top: 5rem;
+    top: 0;
     right: 1.5rem;
 }
 
@@ -450,13 +489,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 6.2rem;
+    top: 1.5rem;
     right: 0.8rem;
+}
+
+.imgs8 {
+    margin-bottom: 1.5rem;
+    position: relative;
 }
 
 .imgs8 small {
     position: absolute;
-    top: 10rem;
+    top: 0;
     right: 1.5rem;
 }
 
@@ -465,13 +509,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 11rem;
-    right: 1.2rem;
+    top: 1.5rem;
+    left: 5.3rem;
+}
+
+.imgs9 {
+    margin-bottom: 1.5rem;
+    position: relative;
 }
 
 .imgs9 small {
     position: absolute;
-    top: 14.5rem;
+    top: 0;
     right: 1.6rem;
 }
 
@@ -480,13 +529,18 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 15.5rem;
+    top: 1.5rem;
     right: -0.5rem;
+}
+
+.imgs10 {
+    margin-bottom: 1.5rem;
+    position: relative;
 }
 
 .imgs10 small {
     position: absolute;
-    top: 19rem;
+    top: 0;
     right: 1.6rem;
 }
 
@@ -495,15 +549,172 @@ a {
     font-size: 1rem;
     font-weight: 500;
     position: absolute;
-    top: 20.2rem;
-    right: 0.9rem;
+    top: 1.5rem;
+    right: 1rem;
+} */
+
+
+.hamburger {
+    display: none;
 }
 
-footer {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-size: 1.4rem;
-    padding-top: 5rem;
-    padding-bottom: 1rem;
+@media screen and (max-width: 733px) {
+    .update, .socials, .nav-2 {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .nav-1 {
+        margin: 0;
+        padding: 0;
+    }
+
+    .headline {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+    .div-1 {
+        background-image: url('./assets/1.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+    }
+
+    .div-1 p {
+        position: absolute;
+        top: 11rem;
+        left: 1rem;
+        font-family: "Sofia Sans", sans-serif;
+        font-size: 0.8rem;
+    }
+
+    .div-1 h2 {
+        position: absolute;
+        top: 12rem;
+        left: 1rem;
+        font-family: "Oswald", sans-serif;
+        font-size: 1.3rem;
+    }
+
+    .div-1 button {
+        background-color: #0088FF;
+        padding: 0.5rem;
+        color: #FFFFFF;
+        position: absolute;
+        top: 2rem;
+        left: 2rem;
+        border: none;
+        font-size: 0.8rem;
+        font-family: "Sofia Sans", sans-serif;
+    }
+    .div-2 {
+        background-image: url('./assets/2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    position: relative;
+    }
+
+    .div-2 h3 {
+        position: absolute;
+        top: 5.5rem;
+        left: 1rem;
+        font-family: "Oswald", sans-serif;
+        font-size: 0.8rem;
+    }
+
+    .div-2 p {
+        position: absolute;
+        top: 3.5rem;
+        left: 1rem;
+        font-family: "Sofia", cursive;
+        font-size: 0.65rem;
+    }
+
+    .div-2 button {
+        background-color: #997C00;
+        padding: 0.5rem;
+        color: #FFFFFF;
+        position: absolute;
+        top: 0.5rem;
+        left: 0.7rem;
+        border: none;
+        font-size: 0.7rem;
+    }
+
+    .div-3 {
+        background-image: url('./assets/Image3.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+    }
+
+    .div-3 p {
+        position: absolute;
+        top: 3.5rem;
+        left: 1rem;
+        font-family: "Sofia", cursive;
+        font-size: 0.7rem;
+    }
+
+    .div-3 h3 {
+        position: absolute;
+        top: 5.5rem;
+        left: 1rem;
+        font-family: "Oswald", sans-serif;
+        font-size: 0.8rem;
+    }
+
+    .div-3 button {
+        background-color: #0088FF;
+        padding: 0.5rem;
+        color: #FFFFFF;
+        position: absolute;
+        top: 0.5rem;
+        left: 0.7rem;
+        border: none;
+        font-size: 0.7rem;
+    }
+
+    .div-4 {
+        background-image: url('./assets/4.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        position: relative;
+    }
+
+    .div-4 h2 {
+        position: absolute;
+        top: 5.5rem;
+        left: 1rem;
+        font-family: "Oswald", sans-serif;
+        font-size: 0.8rem;
+    }
+
+    .div-4 p {
+        position: absolute;
+        top: 4.5rem;
+        left: 1rem;
+        font-family: "Sofia Sans", sans-serif;
+        font-size: 0.8rem;
+    }
+
+    .div-4 button {
+        background-color: #997C00;
+        padding: 0.5rem;
+        color: #FFFFFF;
+        position: absolute;
+        top: 0.5rem;
+        left: 0.7rem;
+        border: none;
+        font-size: 0.7rem;
+    }
+
 }
