--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montaga&family=Oswald:wght@200..700&display=swap');
+
 
 * {
     padding: 0;
@@ -551,11 +553,21 @@ a {
     position: absolute;
     top: 1.5rem;
     right: 1rem;
-} */
-
+}
 
 .hamburger {
     display: none;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+}
+
+footer p {
+    font-family: "Montaga", serif;
 }
 
 @media screen and (max-width: 733px) {
@@ -717,4 +729,172 @@ a {
         font-size: 0.7rem;
     }
 
+    .container-2 {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .heads {
+        border: none;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .buttons button {
+        padding: 1rem;
+    }
+
+    .six, .seven, .eight {
+        display: none;
+    }
+
+    .miss {
+        border: none;
+        margin-bottom: 1rem;
+    }
+
+    .img0 {
+        display: none;
+    }
+    
+    .imgs1 small {
+        position: absolute;
+        top: 0.4rem;
+        left: 7rem;
+    }
+
+    br {
+        display: none;
+    }
+
+    .imgs1 h2 {
+        position: absolute;
+        top: 1.6rem;
+        left: 7rem;
+    }
+
+    .imgs2 small {
+        position: absolute;
+        top: 6.5rem;
+        left: 7rem;
+    }
+
+    .imgs2 h2 {
+        position: absolute;
+        top: 7.5rem;
+        left: 7rem;
+    }
+
+    .imgs3 small {
+        position: absolute;
+        top: 12.6rem;
+        left: 7rem;
+    }
+
+    .imgs3 h2 {
+        position: absolute;
+        top: 14rem;
+        left: 7rem;
+    } 
+    
+    .imgs4 small {
+        position: absolute;
+        top: 19rem;
+        left: 7rem;
+    }
+
+    .imgs4 h2 {
+        position: absolute;
+        top: 20rem;
+        left: 7rem;
+    }
+    
+    .imgs5 small {
+        position: absolute;
+        top: 25rem;
+        left: 7rem;
+    }
+
+    .imgs5 h2 {
+        position: absolute;
+        top: 26rem;
+        left: 7rem;
+    }
+
+    .bottom-grid2 {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .imgs6 small {
+        position: absolute;
+        top: 0.4rem;
+        left: 5.5rem;
+    }
+
+    .imgs6 h2 {
+        position: absolute;
+        top: 2.5rem;
+        left: 5.5rem;
+    }
+
+    .imgs7 small {
+        position: absolute;
+        top: 0.5rem;
+        left: 5.5rem;
+    }
+
+    .imgs7 h2 {
+        position: absolute;
+        top: 2.5rem;
+        left: 5.5rem;
+    }
+
+    .imgs8 small {
+        position: absolute;
+        top: 0.5rem;
+        left: 5.5rem;
+    }
+
+    .imgs8 h2 {
+        position: absolute;
+        top: 2.9rem;
+        left: 5.5rem;
+    } 
+    
+    .imgs9 small {
+        position: absolute;
+        top: 0.5rem;
+        left: 5.5rem;
+    }
+
+    .imgs9 h2 {
+        position: absolute;
+        top: 2.8rem;
+        left: 5.5rem;
+    }
+    
+    .imgs10 small {
+        position: absolute;
+        top: 0.5rem;
+        left: 5.5rem;
+    }
+
+    .imgs10 h2 {
+        position: absolute;
+        top: 2.6rem;
+        left: 5.5rem;
+    }
+    
+    .header-3 {
+        display: flex;
+        justify-content: space-between;
+    }
 }
